修改 index.html 的 head 部分，以提升 SEO 优化效果

--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 
 <head>
   <meta charset="UTF-8">
-  <title>个人文档博客</title>
+  <title>个人文档博客 - 高品质文档与博客</title>
   <link rel="icon" href="./_media/ayetk-i8ehc.svg" sizes="16x16">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="viewport"
-    content="width=device-width,height=device-height,initial-scale=1,maximum-scale=1,user-scalable=no">
-  <meta content="docsify,Docsify,docsify-thy,搭建博客,文档网站,Hugo,GitHub Page,docsifyjs,docsify模板,博客,Blog,一键搭建"
-    name="keywords">
-  <meta
-    content="🌟docsify-thy是一个 Docsify 模板，你可以使用此模板 [docsify-thy]创建自己文档博客。关于动态文档生成工具有很多如：Docsify、 VuePress、Hugo 、Hexo这些都是一些非常优秀的文档生成工具，这里主要介绍如何快速使用Docsify搭建一个快捷、轻量级的个人&amp;amp;团队文档。"
-    name="description">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="docsify, Docsify, docsify-thy, 搭建博客, 文档网站, Hugo, GitHub Page, docsifyjs, docsify模板, 博客, Blog">
+  <meta name="description" content="个人文档博客，分享Docsify及其他文档网站搭建技巧与案例，提供高质量内容供技术与创作者交流。">
+  
+  <!-- Open Graph -->
+  <meta property="og:title" content="个人文档博客 - 高品质文档与博客">
+  <meta property="og:description" content="个人文档博客，分享Docsify及其他文档网站搭建技巧与案例。">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://docs.99kids.icu/">
+  <meta property="og:image" content="./_media/ayetk-i8ehc.svg">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://your-domain.com/">
+
   <!-- themes : dark.css buble.css dolphin.css pure.css -->
   <link rel="stylesheet" href="//s4.zstatic.net/npm/docsify/lib/themes/vue.css">
   <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css"> -->
