修改 index.html 的 head 部分，以提升 SEO 优化效果

--- a/index.html
+++ b/index.html
@@ -18,13 +18,29 @@
   <meta property="og:image" content="./_media/ayetk-i8ehc.svg">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://your-domain.com/">
+  <link rel="canonical" href="https://docs.99kids.icu/">
 
   <!-- themes : dark.css buble.css dolphin.css pure.css -->
   <link rel="stylesheet" href="//s4.zstatic.net/npm/docsify/lib/themes/vue.css">
   <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css"> -->
   <!-- <link href="https://cdn.bootcdn.net/ajax/libs/docsify/4.13.1/themes/vue.css" rel="stylesheet"> -->
+  
+    <!-- 站长验证 -->
+    <!-- <meta name="baidu-site-verification" content="你的百度验证代码">
+    <meta name="msvalidate.01" content="你的Bing验证代码">
+    <meta name="google-site-verification" content="你的谷歌验证代码">
+    <meta name="360-site-verification" content="你的360验证代码"> -->
 
+  <!-- JSON-LD 结构化数据 -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://docs.99kids.icu/",
+      "@type": "Blog",
+      "name": "个人文档博客 - 高品质文档与博客",
+      "url": "https://docs.99kids.icu/",
+      "description": "个人文档博客，分享Docsify及其他文档网站搭建技巧与案例，提供高质量内容供技术与创作者交流。"
+    }
+    </script>
 </head>
 
 <body>
