--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           var footer = [
             '<hr/>',
             '<footer>',
-            '<span><a href="https://github.com/aishangxuejie/docsify-thy">Aishangxuejie</a> &copy;2024.</span>',
+            '<span><a href="https://docs.99kids.icu/">docs.99kids.icu</a> &copy;2024.</span>',
             '<span>Proudly published with <a href="https://github.com/aishangxuejie/docsify-thy" target="_blank">docsify-thy</a>.</span>',
             '</footer>'
           ].join('');
